--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
+  "homepage": "https://ziaddalii.github.io/onet/",
   "name": "weather-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
+    "predeploy" : "npm run build",
+    "deploy" :"gh-pages -d build",
     "build": "webpack --mode production"
   },
   "keywords": [],
@@ -23,6 +26,7 @@
     "@babel/preset-react": "^7.18.6",
     "css-loader": "^6.7.2",
     "file-loader": "^6.2.0",
+    "gh-pages": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "react-router-dom": "^6.4.5",
     "style-loader": "^3.3.1",
