--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://ziaddalii.github.io/onet-project/",
-  "name": "weather-app",
+  "name": "onet-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-loader": "^9.1.0",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-owl-carousel": "^2.3.3",
     "react-scripts": "^5.0.1",
