deployed new version

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ziaddalii.github.io/onet-project/",
+  "homepage": "https://ziaddalii.github.io/onet/",
   "name": "onet-app",
   "version": "1.0.0",
   "description": "",
